--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -64,8 +63,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="494dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,14 +78,14 @@
             android:layout_marginLeft="45dp"
             android:layout_weight="1"
             android:paddingLeft="87sp"
-            android:text=" COMPRA  |  VENTA"
+            android:text="   COMPRA   |    VENTA"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:textStyle="bold" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
@@ -123,14 +122,14 @@
 
             <TextView
                 android:id="@+id/dn"
-                android:layout_width="88dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:lines="2"
-                android:text="Dolar Nacion"
+                android:text="Nacion"
                 android:textColor="@color/black"
-                android:textSize="22dp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -150,7 +149,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView5"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="12dp"
@@ -193,11 +192,11 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:lines="2"
-                android:text="Dolar Blue"
+                android:text="Blue"
                 android:textColor="@color/black"
-                android:textSize="22dp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
             <ImageView
@@ -215,7 +214,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="12dp"
@@ -255,11 +254,11 @@
                 android:layout_width="89dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:lines="2"
-                android:text="Dolar Ahorro"
+                android:text="Ahorro"
                 android:textColor="@color/black"
-                android:textSize="22dp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
 
@@ -267,7 +266,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView3"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="12dp"
@@ -306,11 +305,11 @@
                 android:layout_width="92dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:lines="2"
-                android:text="Dolar Mep"
+                android:text="Mep"
                 android:textColor="@color/black"
-                android:textSize="22dp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -331,7 +330,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView4"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="12dp"
@@ -371,11 +370,11 @@
                 android:layout_width="92dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:lines="2"
-                android:text="Dolar liqui"
+                android:text="Liqui"
                 android:textColor="@color/black"
-                android:textSize="22dp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -393,12 +392,65 @@
 
 
         </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView6"
+            android:layout_width="320dp"
+            android:layout_height="65dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="12dp"
+            app:cardBackgroundColor="@color/celestito"
+            app:cardCornerRadius="25dp"
+            app:layout_constraintBottom_toTopOf="@+id/cardView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+
+            <ImageView
+                android:id="@+id/dltarj"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="18dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+                app:srcCompat="@drawable/credit" />
+
+            <TextView
+                android:id="@+id/dt"
+                android:layout_width="92dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:text="Tarjeta"
+                android:textColor="@color/black"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dlt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:layout_marginLeft="40dp"
+                android:layout_weight="1"
+                android:text="$000.00"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
+        android:layout_width="413dp"
+        android:layout_height="41dp"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/bottom_navigation"
         app:itemIconSize="40dp"
@@ -409,67 +461,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_main" />
-
-    <LinearLayout
-        android:layout_width="80dp"
-        android:layout_height="413dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
-        app:layout_constraintVertical_bias="1.0">
-
-        <TextView
-            android:id="@+id/dnflecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/dbflecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/daflecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/dmflecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/dlflecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
