--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo2"
-    tools:context="dncom.example.dolarnow.MainActivity">
+    tools:context="com.example.dolarargentina.MainActivity">
 
     <include
         android:id="@+id/include"
