--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo2"
-    tools:context="dncom.example.dolarnow.MainActivity">
+    tools:context="com.example.dolarargentina.MainActivity">
 
     <include
         android:id="@+id/include"
@@ -13,42 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="57dp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="w"
-        android:textColor="@color/azul"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="20dp"
-        android:text="Dolar N"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:text="Dolar Argentina"
         android:textColor="@color/azul"
-        android:textSize="50dp"
+        android:textSize="40dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include" />
-
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.656"
-        app:srcCompat="@drawable/dn2" />
 
     <Button
         android:id="@+id/enter"
@@ -63,12 +42,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="400dp"
-        android:layout_height="494dp"
+        android:layout_width="390dp"
+        android:layout_height="491dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.345">
 
         <TextView
@@ -449,8 +428,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="413dp"
-        android:layout_height="41dp"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/bottom_navigation"
         app:itemIconSize="40dp"
