--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo2"
     android:fitsSystemWindows="false"
-    tools:context="dncom.example.dolarnow.splash"
+    tools:context="com.example.dolarargentina.splash"
     tools:openDrawer="start">
 
     <include
@@ -31,8 +31,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="322dp"
-        android:layout_height="447dp"
+        android:layout_width="346dp"
+        android:layout_height="238dp"
         android:layout_marginTop="40dp"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.516"
-        app:srcCompat="@drawable/dn2" />
+        app:srcCompat="@drawable/da" />
 
     <TextView
         android:id="@+id/textView2"
